--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,16 @@
 
 		<!-- Test -->
 		<junit.version>4.11</junit.version>
-	
+
 		<!-- Compiler plugin -->
 		<compiler-plugin-version>3.7.0</compiler-plugin-version>
-		
-		<commons-io.version>2.4</commons-io.version>
-		
+	
+		<!-- commons-io -->
+		<commons-io.version>2.6</commons-io.version>
+
+		<!-- log4j -->
+		<log4j.version>2.11.0</log4j.version>
+
 
 	</properties>
 
@@ -70,6 +74,9 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring-framework.version}</version>
 		</dependency>
+
+
+		<!-- file processing -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -88,6 +95,11 @@
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 
 
